packages/beff-core/tests/snapshots/print_router__tests__ok_template_literal_type.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type TvideoSize = string;
type Router = { "/hello": { "get": () => TvideoSize } };

