packages/beff-core/tests/snapshots/print_router__tests__ok_tpl.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = ["a", "b", "c"];
type B = "b";
type Router = { "/hello": { "get": () => B } };

