packages/beff-core/tests/snapshots/print_router__tests__ok_tpl_rest.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = ["a", "b", "c", ...string[]];
type B = string;
type Router = { "/hello": { "get": () => B } };

