packages/beff-core/tests/snapshots/print_router__tests__ok_typeof_bigint.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = bigint;
type Router = { "/hello": { "get": () => A } };

