packages/beff-core/tests/snapshots/print_router__tests__ok_typeof_keyof_access.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type Router = {
  "/no_const": { "get": () => number };
  "/yes_const": { "get": () => 1 };
};

