packages/beff-core/tests/snapshots/print_router__tests__ok_typeof_keyof_as_const_arr_indexed.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = ["x"] | ["y"];
type B = "x" | "y";
type Router = { "/it": { "get": () => B } };

